Fix active card long strings overflow

--- a/src/app/features/overview/overview-active-panel/overview-active-panel.component.css
+++ b/src/app/features/overview/overview-active-panel/overview-active-panel.component.css
@@ -11,6 +11,8 @@
 
 .card .card-block {
     padding: 6px 12px;
+    word-break: break-all;
+    overflow: hidden;
 }
 
 .card .card-footer {
